# basic_algorithms_and_data_structures_in_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/collections/: doubly_linked_list.rs  linked_list.rs  list.rs  loopy_patricia.rs  mod.rs  patricia.rs
src/graphs/: graph.rs
src/sort_algorithms/: bubble_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs  sort.rs
src/trees/: binary_search_tree.rs
