[package]
name = "basic_algorithms_and_data_structures_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yield-return = "0.1.0"
rand = "0.9.0-alpha.1"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["atomic", "alloc"]
